[TestGenerator] Remove strategies that are not implemented, clear up the explanation of available strategies